--- a/requirements.txt
+++ b/requirements.txt
@@ -126,7 +126,7 @@ toolz==1.0.0
 tornado==6.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
-typing-inspection==0.4.0
+typing-inspection==0.4.0x
 typing_extensions==4.13.2
 uri-template==1.3.0
 urllib3==2.4.0
