--- a/env.example
+++ b/env.example
@@ -1,1 +1,9 @@
- 
+# Configuration pour les tests WebSocket Hyperliquid
+# Copiez ce fichier vers .env et remplissez avec vos vraies valeurs
+
+# Adresse de votre wallet sur le testnet Hyperliquid
+WALLET_ADDRESS=0x0000000000000000000000000000000000000000
+
+# Variables d'environnement pour l'API
+API_USERNAME=admin
+API_PASSWORD=your-secure-password 
